feat: added prefix for both time and event based endpoints to make them distinct
